--- a/src/main/resources/web/hello.zul
+++ b/src/main/resources/web/hello.zul
@@ -1,5 +1,5 @@
 <zk>
-    <window title="Hello ZK - Spring Boot!" border="normal">
+    <window title="Hello ZK - Spring Boot!" border="normal" closable="true" draggable="true" >
         You are using ZK version <label value="${session.webApp.version}"/>
     </window>
 </zk>
